# SHAT

./: .gitignore  README.md  SHAT.code-workspace
ConsoleInterface/: Cargo.toml
ConsoleInterface/src/: core.rs  fetch_from_db.rs  main.rs  term_control.rs
console_interface/: Cargo.toml  dummy_chat.txt
console_interface/src/: core.rs  db_access.rs  main.rs  term_control.rs
database_api/: Cargo.toml
database_api/migrations/2021-08-11-094641_intial_migrations/: down.sql  up.sql
database_api/src/: app_state.rs  lib.rs  main.rs  schema.rs
database_api/src/database/: db_queries.rs  db_setup.rs  mod.rs
database_api/src/database/query_constructor/: mod.rs  query_constructor.rs  replace_placeholder.rs
database_api/src/db_access/: db_queries.rs  db_resources.rs  db_setup.rs  mod.rs
database_api/src/dto_s/: chat_dto.rs  message_dto.rs
database_api/src/endpoints/: messages_endpoints.rs  mod.rs
database_api/src/models/: chat.rs  message.rs  mod.rs  person.rs
database_api/src/models/dto_s/: mod.rs
database_api/src/models/dto_s/chat/: chat_dto.rs  message_dto.rs  mod.rs
database_api/src/models/pure/: mod.rs
database_api/src/models/pure/chat/: chat.rs  message.rs
database_api/src/models/pure/database/: db_resources.rs  mod.rs
database_api/src/models/pure/person/: person.rs
