[package]
name = "database_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
postgres = "0.19.1"
serde = "1.0.127"
time = "0.3.1"
tokio = { version = "1.10.0", features = ["rt"] }
tokio-postgres = { version = "0.7.2", features = ["runtime", "with-serde_json-1" ] }
